# HelloWorldC4

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/helloworldc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ActivityHandler.h  Asteroid.cpp  Asteroid.h  DroidBlaster.cpp  DroidBlaster.h  EventLoop.cpp  EventLoop.h  GraphicsManager.cpp  GraphicsManager.h  Log.cpp  Log.h  Main.cpp  PhysicsManager.cpp  PhysicsManager.h  Resource.cpp  Resource.h  Ship.cpp  Ship.h  Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  SoundQueue.cpp  SoundQueue.h  Sprite.cpp  Sprite.h  SpriteBach.cpp  SpriteBatch.h  StarField.cpp  StarField.h  TimeManager.cpp  TimeManager.h  Types.h  cmake.h  helloworld-c.cpp
app/src/main/java/com/example/helloworldc/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/helloworldc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
